--- a/Master.master
+++ b/Master.master
@@ -50,7 +50,7 @@
                                 <li class="nav-item"><a class="nav-link smoth-animation" href="News.aspx">الأخبار</a></li>
                                 <li class="nav-item"><a class="nav-link smoth-animation" href="Courses.aspx">الدورات</a></li>
                                 <li class="nav-item"><a class="nav-link smoth-animation" href="Seminars.aspx">الندوات</a></li>
-                                <li class="nav-item"><a class="nav-link smoth-animation" href="#">المؤتمرات</a></li>
+                                <li class="nav-item"><a class="nav-link smoth-animation" href="Conferences.aspx">المؤتمرات</a></li>
                                 <li class="nav-item"><a class="nav-link smoth-animation" href="Technical_Analysis.aspx">تحليلات الاسواق</a></li>
                                 <li class="nav-item"><a class="nav-link smoth-animation" href="Album_Videos.aspx">الفيديوهات</a></li>
                                 <li class="nav-item"><a class="nav-link smoth-animation" href="Album_Photos.aspx">الصور</a></li>
@@ -112,14 +112,21 @@
                         <span class="title">تواصل معى عبر</span>
                         <ul class="social-share d-flex liststyle">
                             <li class="facebook">
-                                <a href="#">
+                                <a href="<%# Eval("FacebookURL").ToString  %>" target="_blank">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-facebook">
                                         <path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"></path>
                                     </svg>
                                 </a>
                             </li>
+                            <li class="twitter">
+                                <a href="<%# Eval("TwitterURL").ToString  %>" target="_blank">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-twitter">
+                                        <path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"></path>
+                                    </svg>
+                                </a>
+                            </li>
                             <li class="instagram">
-                                <a href="#">
+                                <a href="<%# Eval("InstagramURL").ToString  %>" target="_blank">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-instagram">
                                         <rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect>
                                         <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path>
@@ -128,8 +135,17 @@
                                 </a>
                             </li>
                             <li class="linkedin">
-                                <a href="#">
+                                <a href="<%# Eval("LinkedInURL").ToString  %>" target="_blank">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-linkedin">
+                                        <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path>
+                                        <rect x="2" y="9" width="4" height="12"></rect>
+                                        <circle cx="4" cy="4" r="2"></circle>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li class="youtube">
+                                <a href="<%# Eval("YoutubeURL").ToString  %>" target="_blank">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-youtube">
                                         <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path>
                                         <rect x="2" y="9" width="4" height="12"></rect>
                                         <circle cx="4" cy="4" r="2"></circle>
@@ -160,9 +176,11 @@
                 <div class="demo-button">
                     <asp:ListView runat="server" ID="lvSocialMedia">
                         <ItemTemplate>
-                            <a class="btn-social" href="<%# Eval("FacebookURL").ToString  %>"><i data-feather="facebook"></i></a>
-                            <a class="btn-social" href="<%# Eval("InstagramURL").ToString  %>"><i data-feather="instagram"></i></a>
-                            <a class="btn-social" href="<%# Eval("LinkedInURL").ToString  %>"><i data-feather="linkedin"></i></a>
+                            <a class="btn-social" href="<%# Eval("FacebookURL").ToString  %>" target="_blank"><i data-feather="facebook"></i></a>
+                            <a class="btn-social" href="<%# Eval("TwitterURL").ToString  %>" target="_blank"><i data-feather="twitter"></i></a>
+                            <a class="btn-social" href="<%# Eval("InstagramURL").ToString  %>" target="_blank"><i data-feather="instagram"></i></a>
+                            <a class="btn-social" href="<%# Eval("LinkedInURL").ToString  %>" target="_blank"><i data-feather="linkedin"></i></a>
+                            <a class="btn-social" href="<%# Eval("YoutubeURL").ToString  %>" target="_blank"><i data-feather="youtube"></i></a>
                         </ItemTemplate>
                     </asp:ListView>
 
