--- a/Master.master
+++ b/Master.master
@@ -10,7 +10,7 @@
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <!-- Favicon -->
-    <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.png" />
     <!-- CSS
     ============================================ -->
     <link rel="stylesheet" href="assets/fontawsome-5.4.1/css/all.min.css" />
@@ -100,7 +100,7 @@
                         <li class="nav-item"><a class="nav-link smoth-animation" href="News.aspx">الأخبار</a></li>
                         <li class="nav-item"><a class="nav-link smoth-animation" href="Courses.aspx">الدورات</a></li>
                         <li class="nav-item"><a class="nav-link smoth-animation" href="Seminars.aspx">الندوات</a></li>
-                        <li class="nav-item"><a class="nav-link smoth-animation" href="#">المؤتمرات</a></li>
+                        <li class="nav-item"><a class="nav-link smoth-animation" href="Conferences.aspx">المؤتمرات</a></li>
                         <li class="nav-item"><a class="nav-link smoth-animation" href="Technical_Analysis.aspx">تحليلات الاسواق المالية</a></li>
                         <li class="nav-item"><a class="nav-link smoth-animation" href="Album_Videos.aspx">الفيديوهات</a></li>
                         <li class="nav-item"><a class="nav-link smoth-animation" href="Album_Photos.aspx">الصور</a></li>
