--- a/Master.master
+++ b/Master.master
@@ -13,6 +13,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.png" />
     <!-- CSS
     ============================================ -->
+    <link href="assets/fontawsome-5.4.1/css/pro.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="assets/fontawsome-5.4.1/css/all.min.css" />
     <link rel="stylesheet" href="assets/css/vendor/bootstrap.min.css" />
     <link rel="stylesheet" href="assets/css/vendor/slick.css" />
@@ -47,12 +48,12 @@
                             <!-- Start Mainmanu Nav -->
                             <ul class="primary-menu nav nav-pills">
                                 <li class="nav-item"><a class="nav-link smoth-animation active" href="Home.aspx">الرئيسية</a></li>
+                                <li class="nav-item"><a class="nav-link smoth-animation" href="Technical_Analysis.aspx">تحليلات الاسواق</a></li>
                                 <li class="nav-item"><a class="nav-link smoth-animation" href="News.aspx">الأخبار</a></li>
-                                <li class="nav-item"><a class="nav-link smoth-animation" href="Courses.aspx">الدورات</a></li>
+                                <li class="nav-item"><a class="nav-link smoth-animation" href="Courses.aspx">الدورات التدريبية</a></li>
                                 <li class="nav-item"><a class="nav-link smoth-animation" href="Seminars.aspx">الندوات</a></li>
                                 <li class="nav-item"><a class="nav-link smoth-animation" href="Conferences.aspx">المؤتمرات</a></li>
-                                <li class="nav-item"><a class="nav-link smoth-animation" href="Technical_Analysis.aspx">تحليلات الاسواق</a></li>
-                                <li class="nav-item"><a class="nav-link smoth-animation" href="Album_Videos.aspx">الفيديوهات</a></li>
+                                <li class="nav-item"><a class="nav-link smoth-animation" href="Album_Videos.aspx">الفيديو</a></li>
                                 <li class="nav-item"><a class="nav-link smoth-animation" href="Album_Photos.aspx">الصور</a></li>
                                 <li class="nav-item"><a class="nav-link smoth-animation" href="About.aspx">عنى</a></li>
                             </ul>
@@ -97,12 +98,12 @@
                 <div class="content">
                     <ul class="primary-menu nav nav-pills">
                         <li class="nav-item"><a class="nav-link smoth-animation active" href="Home.aspx">الرئيسية</a></li>
+                        <li class="nav-item"><a class="nav-link smoth-animation" href="Technical_Analysis.aspx">تحليلات الاسواق</a></li>
                         <li class="nav-item"><a class="nav-link smoth-animation" href="News.aspx">الأخبار</a></li>
-                        <li class="nav-item"><a class="nav-link smoth-animation" href="Courses.aspx">الدورات</a></li>
+                        <li class="nav-item"><a class="nav-link smoth-animation" href="Courses.aspx">الدورات التدريبية</a></li>
                         <li class="nav-item"><a class="nav-link smoth-animation" href="Seminars.aspx">الندوات</a></li>
                         <li class="nav-item"><a class="nav-link smoth-animation" href="Conferences.aspx">المؤتمرات</a></li>
-                        <li class="nav-item"><a class="nav-link smoth-animation" href="Technical_Analysis.aspx">تحليلات الاسواق المالية</a></li>
-                        <li class="nav-item"><a class="nav-link smoth-animation" href="Album_Videos.aspx">الفيديوهات</a></li>
+                        <li class="nav-item"><a class="nav-link smoth-animation" href="Album_Videos.aspx">الفيديو</a></li>
                         <li class="nav-item"><a class="nav-link smoth-animation" href="Album_Photos.aspx">الصور</a></li>
                         <li class="nav-item"><a class="nav-link smoth-animation" href="About.aspx">عنى</a></li>
                         <li class="nav-item"><a class="nav-link smoth-animation" href="Contact.aspx">تواصل معى</a></li>
@@ -121,7 +122,7 @@
                             <li class="twitter">
                                 <a href="<%# Eval("TwitterURL").ToString  %>" target="_blank">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-twitter">
-                                        <path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"></path>
+                                        <path d="M23 3a10.9 10.9 0 0 1-3.14 1.53 4.48 4.48 0 0 0-7.86 3v1A10.66 10.66 0 0 1 3 4s-4 9 5 13a11.64 11.64 0 0 1-7 2c9 5 20 0 20-11.5a4.5 4.5 0 0 0-.08-.83A7.72 7.72 0 0 0 23 3z"></path>
                                     </svg>
                                 </a>
                             </li>
@@ -146,10 +147,19 @@
                             <li class="youtube">
                                 <a href="<%# Eval("YoutubeURL").ToString  %>" target="_blank">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-youtube">
-                                        <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path>
-                                        <rect x="2" y="9" width="4" height="12"></rect>
-                                        <circle cx="4" cy="4" r="2"></circle>
+                                        <path d="M22.54 6.42a2.78 2.78 0 0 0-1.94-2C18.88 4 12 4 12 4s-6.88 0-8.6.46a2.78 2.78 0 0 0-1.94 2A29 29 0 0 0 1 11.75a29 29 0 0 0 .46 5.33A2.78 2.78 0 0 0 3.4 19c1.72.46 8.6.46 8.6.46s6.88 0 8.6-.46a2.78 2.78 0 0 0 1.94-2 29 29 0 0 0 .46-5.25 29 29 0 0 0-.46-5.33z"></path>
+                                        <polygon points="9.75 15.02 15.5 11.75 9.75 8.48 9.75 15.02"></polygon>
                                     </svg>
+                                </a>
+                            </li>
+                            <li class="telegram-plane">
+                                <a href="#" target="_blank">
+                                    <i class="fab fa-telegram-plane"></i>
+                                </a>
+                            </li>
+                            <li class="tiktok">
+                                <a href="#" target="_blank">
+                                    <i class="fab fa-tiktok"></i>
                                 </a>
                             </li>
                         </ul>
@@ -181,6 +191,8 @@
                             <a class="btn-social" href="<%# Eval("InstagramURL").ToString  %>" target="_blank"><i data-feather="instagram"></i></a>
                             <a class="btn-social" href="<%# Eval("LinkedInURL").ToString  %>" target="_blank"><i data-feather="linkedin"></i></a>
                             <a class="btn-social" href="<%# Eval("YoutubeURL").ToString  %>" target="_blank"><i data-feather="youtube"></i></a>
+                            <a class="btn-social" href="#" target="_blank"><i class="fab fa-telegram-plane"></i></a>
+                            <a class="btn-social" href="#" target="_blank"><i class="fab fa-tiktok"></i></a>
                         </ItemTemplate>
                     </asp:ListView>
 
@@ -203,8 +215,18 @@
                             </div>
 
                             <p class="description mt--30 mb--0" style="font-size: 14px;">
-                                لوريم ايبسوم دولار سيت أميت ,كونسيكتيتور أدايبا يسكينج أليايت,سيت دو أيوسمود تيمبور أنكايديديونتيوت لابوري ات دولار ماجنا أليكيوا
+                                <b>اخلاء المسئولية : </b>
+المعلومات، والأخبار، والأبحاث، والتقارير، والآراء وجميع المحتويات على موقع ElsayedHussein.com هي لأغراض نشر المعلومات والتعليم فقط ولا تشكل المعلومات الواردة هنا إلتماسا لغرض بيع أو شراء أي سلعة أو أسهم أو استثمار، ولا يجب أن تكون أساساً لأي قرار استثماري. ولا يضمن الموقع الالكتروني دقة أو كمال أي من المعلومات أو التحاليل المقدمة، والموقع الالكتروني غير مسؤول قانونيا تجاه أي طرف عن دقة المعلومات أو تحليلات مقدمة من خلال هذا الموقع الالكتروني.
+
                             </p>
+
+                            <div class="links mt--10 mb--15">
+                                <a href="Risk_Warning.aspx">تحذير المخاطر</a>
+                                <a href="Evacuation_Responsibilaty.aspx">اخلاء المسئولية</a>
+                                <a href="Privacy_Policy.aspx">سياسة الخصوصية</a>
+                                <a href="Copyright.aspx">حقوق النشر</a>
+                            </div>
+
                             <p class="description mt--10">© جميع الحقوق محفوظة 2021 <a target="_blank" href="https://themeforest.net/user/rainbow-themes/portfolio"></a></p>
                         </div>
                     </div>
