--- a/Master.master
+++ b/Master.master
@@ -26,7 +26,7 @@
     <asp:ContentPlaceHolder ID="StyleSheet" runat="server"></asp:ContentPlaceHolder>
 </head>
 <body class="template-color-1 spybody" data-spy="scroll" data-target=".navbar-example2" data-offset="70">
-    <form id="form1" runat="server">
+    <form id="form1" runat="server" autocomplete="off">
         <!-- Start Header -->
         <header class="rn-header haeder-default black-logo-version header--fixed header--sticky">
             <div class="header-wrapper rn-popup-mobile-menu m--0 row align-items-center">
@@ -59,6 +59,7 @@
                             </ul>
                             <!-- End Mainmanu Nav -->
                         </nav>
+                      
                         <!-- Start Header Right  -->
                         <div class="header-right">
                             <a class="rn-btn" href="Contact.aspx"><span>تواصل معى</span></a>
@@ -75,6 +76,13 @@
 
                     </div>
                 </div>
+                  <asp:DropDownList ID="ddlFilterType" runat="server">
+                            <asp:ListItem Value="A">التحليلات</asp:ListItem>
+                            <asp:ListItem Value="N">الأخبار</asp:ListItem>
+                            <asp:ListItem Value="V">الفيديو</asp:ListItem>
+                        </asp:DropDownList>
+                        <asp:TextBox id="txtSearch" runat ="server" placeholder="بحث" ></asp:TextBox>
+                        <asp:Button ID="btnSearch" runat="server" Text="بحث" OnClick="Search" />
                 <!-- End Header Center -->
             </div>
         </header>
