--- a/Master.master
+++ b/Master.master
@@ -31,7 +31,7 @@
         <header class="rn-header haeder-default black-logo-version header--fixed header--sticky">
             <div class="header-wrapper rn-popup-mobile-menu m--0 row align-items-center">
                 <!-- Start Header Left -->
-                <div class="col-lg-2 col-6">
+                <div class="col-lg-1 col-md-2 col-2">
                     <div class="header-left">
                         <div class="logo">
                             <a href="Home.aspx">
@@ -41,8 +41,24 @@
                     </div>
                 </div>
                 <!-- End Header Left -->
+                <div class="col">
+                    <a id="btnSearchIcon" class="btn-search" onclick="showSearch();"><i class="fas fa-search"></i></a>
+                    <div class="input-group search-container">
+                        <div class="input-group-prepend">
+                            <asp:Button ID="btnSearch" runat="server" CssClass="btn" Text="بحث" OnClick="Search" />
+                        </div>
+                        <asp:TextBox ID="txtSearch" runat="server" CssClass="form-control" placeholder="بحث"></asp:TextBox>
+                        <div class="input-group-append">
+                            <asp:DropDownList ID="ddlFilterType" runat="server" CssClass="form-control">
+                                <asp:ListItem Value="A">التحليلات</asp:ListItem>
+                                <asp:ListItem Value="N">الأخبار</asp:ListItem>
+                                <asp:ListItem Value="V">الفيديو</asp:ListItem>
+                            </asp:DropDownList>
+                        </div>
+                    </div>
+                </div>
                 <!-- Start Header Center -->
-                <div class="col-lg-10 col-6">
+                <div class="col-lg-7 col-md-2 col-2">
                     <div class="header-center">
                         <nav id="sideNav" class="mainmenu-nav navbar-example2 d-none d-xl-block">
                             <!-- Start Mainmanu Nav -->
@@ -59,7 +75,7 @@
                             </ul>
                             <!-- End Mainmanu Nav -->
                         </nav>
-                      
+
                         <!-- Start Header Right  -->
                         <div class="header-right">
                             <a class="rn-btn" href="Contact.aspx"><span>تواصل معى</span></a>
@@ -76,13 +92,6 @@
 
                     </div>
                 </div>
-                  <asp:DropDownList ID="ddlFilterType" runat="server">
-                            <asp:ListItem Value="A">التحليلات</asp:ListItem>
-                            <asp:ListItem Value="N">الأخبار</asp:ListItem>
-                            <asp:ListItem Value="V">الفيديو</asp:ListItem>
-                        </asp:DropDownList>
-                        <asp:TextBox id="txtSearch" runat ="server" placeholder="بحث" ></asp:TextBox>
-                        <asp:Button ID="btnSearch" runat="server" Text="بحث" OnClick="Search" />
                 <!-- End Header Center -->
             </div>
         </header>
@@ -224,7 +233,7 @@
 
                             <p class="description mt--30 mb--0" style="font-size: 14px;">
                                 <b>اخلاء المسئولية : </b>
-المعلومات، والأخبار، والأبحاث، والتقارير، والآراء وجميع المحتويات على موقع ElsayedHussein.com هي لأغراض نشر المعلومات والتعليم فقط ولا تشكل المعلومات الواردة هنا إلتماسا لغرض بيع أو شراء أي سلعة أو أسهم أو استثمار، ولا يجب أن تكون أساساً لأي قرار استثماري. ولا يضمن الموقع الالكتروني دقة أو كمال أي من المعلومات أو التحاليل المقدمة، والموقع الالكتروني غير مسؤول قانونيا تجاه أي طرف عن دقة المعلومات أو تحليلات مقدمة من خلال هذا الموقع الالكتروني.
+                                المعلومات، والأخبار، والأبحاث، والتقارير، والآراء وجميع المحتويات على موقع ElsayedHussein.com هي لأغراض نشر المعلومات والتعليم فقط ولا تشكل المعلومات الواردة هنا إلتماسا لغرض بيع أو شراء أي سلعة أو أسهم أو استثمار، ولا يجب أن تكون أساساً لأي قرار استثماري. ولا يضمن الموقع الالكتروني دقة أو كمال أي من المعلومات أو التحاليل المقدمة، والموقع الالكتروني غير مسؤول قانونيا تجاه أي طرف عن دقة المعلومات أو تحليلات مقدمة من خلال هذا الموقع الالكتروني.
 
                             </p>
 
