--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6544,7 +6544,7 @@ select {
     appearance: none;
     border: 1px solid var(--color-border);
     border-radius: 4px;
-    background: url(../images/icons/arrow-icon.png) 95% center no-repeat transparent;
+    /*background: url(../images/icons/arrow-icon.png) 95% center no-repeat transparent;*/
     padding-right: 32px;
 }
 
