--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,7 +42,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap");
 /* Arabic Font */
-@font-face {
+/*@font-face {
     font-family: 'Tajawal';
     src: url('../fonts/Tajawal-Black.ttf');
     src: url('../fonts/Tajawal-Bold.ttf'), url('../fonts/Tajawal-ExtraBold.ttf'), url('../fonts/Tajawal-ExtraLight.ttf'), url('../fonts/Tajawal-Light.ttf'), url('../fonts/Tajawal-Medium.ttf'), url('../fonts/Tajawal-Regular.ttf');
@@ -60,7 +60,7 @@
     src: url('../fonts/AraJozoor-Regular.woff') format('woff'), url('../fonts/AraJozoor-Regular.ttf') format('truetype'), url('../fonts/AraJozoor-Regular.svg') format('svg');
     font-weight: normal;
     font-style: normal;
-}
+}*/
 
 @font-face {
     font-family: 'Cairo';
@@ -68,11 +68,17 @@
     src: url('../fonts/Cairo-Bold.ttf'), url('../fonts/Cairo-ExtraLight.ttf'), url('../fonts/Cairo-Light.ttf'), url('../fonts/Cairo-Regular.ttf'), url('../fonts/Cairo-SemiBold.ttf');
 }
 
-@font-face {
+/*@font-face {
     font-family: 'ElMessiri';
     src: url('../fonts/ElMessiri-Bold.ttf');
     src: url('../fonts/ElMessiri-Medium.ttf'), url('../fonts/ElMessiri-Regular.ttf'), url('../fonts/ElMessiri-SemiBold.ttf');
-}
+}*/
+
+/*@font-face {
+    font-family: 'NotoKufiArabic-Black';
+    src: url('../fonts/NotoKufiArabic-Black.ttf');
+    src: url('../fonts/NotoKufiArabic-Bold.ttf'), url('../fonts/NotoKufiArabic-ExtraBold.ttf'), url('../fonts/NotoKufiArabic-ExtraLight.ttf'), url('../fonts/NotoKufiArabic-Light.ttf'), url('../fonts/NotoKufiArabic-Medium.ttf');
+}*/
 
 :root {
     --direction: rtl;
@@ -130,16 +136,18 @@
     --s-extra-bold: 800;
     --s-black: 900;
     --transition: 0.4s;
-    --font-primary: "Tajawal", "Poppins", sans-serif;
+    /*--font-primary: "Tajawal", "Poppins", sans-serif;
     --font-secondary: "Tajawal", "Montserrat", sans-serif;
     --font-primary: "Droid-Arabic-Kufi", "Poppins", sans-serif;
     --font-secondary: "Droid-Arabic-Kufi", "Montserrat", sans-serif;
     --font-primary: "AraJozoor-Regular", "Poppins", sans-serif;
-    --font-secondary: "AraJozoor-Regular", "Montserrat", sans-serif;
+    --font-secondary: "AraJozoor-Regular", "Montserrat", sans-serif;*/
     --font-primary: "Cairo", "Poppins", sans-serif;
     --font-secondary: "Cairo", "Montserrat", sans-serif;
-    --font-primary: "ElMessiri", "Poppins", sans-serif;
-    --font-secondary: "ElMessiri", "Montserrat", sans-serif;
+    /*--font-primary: "ElMessiri", "Poppins", sans-serif;
+    --font-secondary: "ElMessiri", "Montserrat", sans-serif;*/
+    /*--font-primary: "NotoKufiArabic-Black", "Poppins", sans-serif;
+    --font-secondary: "NotoKufiArabic-Black", "Montserrat", sans-serif;*/
     --font-size-b1: 18px;
     --font-size-b2: 22px;
     --font-size-b3: 14px;
