--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19094,6 +19094,7 @@ div#featured-project-carousel {
     display: block;
     overflow: hidden;
     border-radius: 10px;
+    cursor: pointer;
 }
 
     .rn-portfolio .inner .thumbnail a img,
